# Lab5OS

./: .gitignore  CMakeLists.txt  Lab5OS.cpp  Lab5OS.h  README.md
Client/: ClientApp.cpp  PipeClient.cpp  PipeClient.h
Common/: Employee.h  PipeMessage.h  Protocol.h
Server/: FileStorage.cpp  FileStorage.h  PipeServer.cpp  PipeServer.h  RecordLockManager.cpp  RecordLockManager.h  Server.cpp
tests/: CMakeLists.txt  TestConcurrency.cpp  TestEmployee.cpp  TestFileStorage.cpp  TestFileStorageEdge.cpp  TestRecordLockManager.cpp
